--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -9,7 +9,7 @@ on:
   pull_request:
     branches: [ master ]
   schedule:
-    - cron:  '* * * * *'
+    - cron:  '0 0 * * *'
 jobs:
   build:
     runs-on: ubuntu-latest
